Разметка главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,18 +14,7 @@
       <svg class="page-header__logo-image" width="150" height="21" aria-label="логотип Digital PlaneT"><use xlink:href="#DigitalPlaneT-logo"></use></svg>
     </p>
 
-    <div class="page-header__contacts">
-      <ul class="page-header__list">
-        <li class="page-header__item page-header__item--mail">
-          <a class="page-header__link page-header__link--mail" href="mailto:info@sd.ru"><svg class="page-header__link-image page-header__link-image--mail" width="19" height="14"><use xlink:href="#mail"></use></svg><span class="page-header__link-hidden">info@sd.ru</span></a>
-        </li>
-        <li class="page-header__item page-header__item--tel">
-          <a class="page-header__link page-header__link--tel" href="tel:+74950005252"><svg class="page-header__link-image page-header__link-image--tel" width="18" height="18"><use xlink:href="#tel"></use></svg><span class="page-header__link-hidden">+7 (495) 000 52 52</span></a>
-        </li>
-      </ul>
 
-      <button class="page-header__button" type="button">Заказать звонок</button>
-    </div>
   </header>
 
   <h1>Digital Planet VR</h1>
