Разметка блока как работает

--- a/source/main.html
+++ b/source/main.html
@@ -19,7 +19,7 @@
           <a class="page-header__link" href="product.html">О продукте</a>
         </li>
         <li class="page-header__item">
-          <a class="page-header__link" href="manual.html">Как работает</a>
+          <a class="page-header__link" href="explanation.html">Как работает</a>
         </li>
         <li class="page-header__item">
           <a class="page-header__link" href="technology.html">Технология</a>
