Верстка модальных окон

--- a/source/contacts.html
+++ b/source/contacts.html
@@ -80,6 +80,32 @@
         </form>
       </div>
     </section>
+
+    <section class="popup">
+      <div class="popup__wrapper"></div>
+      <form class="popup__form">
+        <button class="popup__close-button" type="button"><span class="visually-hidden">Закрыть</span></button>
+        <h2 class="popup__title">Закажите VR планетарий</h2>
+        <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
+        <label for="popup-name" class="visually-hidden">Ваше имя</label>
+        <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
+
+        <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
+        <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern="-?(\d+|\d+.\d+|.\d+)([eE][-+]?\d+)?" required>
+
+        <button class="popup__send-button" type="submit">Отправить</button>
+      </form>
+    </section>
+
+    <section class="popup popup__message">
+      <div class="popup__wrapper"></div>
+      <div class="popup__message">
+        <button class="popup__close-button" type="button"><span class="visually-hidden">Закрыть</span></button>
+        <p class="popup__title">Сообщение успешно отправлено!</p>
+        <p class="popup__text">Мы обязательно свяжемся с вами в ближайшее время и подробно ответим на ваш вопрос, будьте на связи!</p>
+        <button class="popup__button" type="button">ОК</button>
+      </div>
+    </section>
   </main>
 
   <footer class="page-footer">
