добавлят графику, шрифты, стилизацию body

--- a/source/index.html
+++ b/source/index.html
@@ -8,15 +8,13 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-  <header class="page-header">
-    <p class="page-header__logo">
-      <svg class="page-header__logo-image" width="150" height="21" aria-label="логотип Digital PlaneT"><use xlink:href="#DigitalPlaneT-logo"></use></svg>
-    </p>
-
-
-  </header>
-
-  <h1>Digital Planet VR</h1>
+  <ul>
+    <li><a href="contacts.html">contacts.html - главная страница</a></li>
+    <li><a href="explanation.html">explanation.html - Как работает</a></li>
+    <li><a href="main.html">main.html - главная страница</a></li>
+    <li><a href="product.html">product.html - О продукте</a></li>
+    <li><a href="questions.html">questions.html - Вопросы</a></li>
+    <li><a href="technology.html">technology.html - Технология</a></li>
+  </ul>
 </body>
 </html>
