Добавляет базовую стилизацию, хедер для десктопа

--- a/source/contacts.html
+++ b/source/contacts.html
@@ -45,14 +45,14 @@
           <a class="page-header__link" href="questions.html">Вопросы</a>
         </li>
         <li class="page-header__item">
-          <a class="page-header__link">Контакты</a>
+          <a class="page-header__link page-header__link--active">Контакты</a>
         </li>
       </ul>
     </nav>
     <div class="page-header__contacts">
       <a class="page-header__link" href="tel:+880055535752">8 (800) 555 35 75</a>
 
-      <button class="page-header__button" type="button">Заказать</button>
+      <button class="button page-header__button" type="button">Заказать</button>
     </div>
   </header>
 
@@ -62,19 +62,19 @@
 
       <ul class="contacts__list">
         <li class="contacts__item">
-          <p class="contacts__item-city">Новороссийск</p>
-          <a class="contacts__item-link" href="tel:+79234650141">+7 (923) 465 – 01 – 41</a>
-          <a class="contacts__item-link" href="mailto:digitalPlanetNR@mail.ru">digitalPlanetNR@mail.ru</a>
+          <p class="contacts__item-text contacts__item-city">Новороссийск</p>
+          <p class="contacts__item-text"><a class="contacts__item-link" href="tel:+79234650141">+7 (923) 465 – 01 – 41</a></p>
+          <p class="contacts__item-text"><a class="contacts__item-link" href="mailto:digitalPlanetNR@mail.ru">digitalPlanetNR@mail.ru</a></p>
         </li>
         <li>
-          <p class="contacts__item-city">Москва</p>
-          <a class="contacts__item-link" href="tel:+74958552419">+7 (495) 855 – 24 – 19</a>
-          <a class="contacts__item-link" href="mailto:digitalPlanetMoscow@mail.ru">digitalPlanetMoscow@mail.ru</a>
+          <p class="contacts__item-text contacts__item-city">Москва</p>
+          <p class="contacts__item-text"><a class="contacts__item-link" href="tel:+74958552419">+7 (495) 855 – 24 – 19</a></p>
+          <p class="contacts__item-text"><a class="contacts__item-link" href="mailto:digitalPlanetMoscow@mail.ru">digitalPlanetMoscow@mail.ru</a></p>
         </li>
         <li>
-          <p class="contacts__item-city">Саратов</p>
-          <a class="contacts__item-link" href="tel:+79422212178">+7 (942) 221 – 21 – 78</a>
-          <a class="contacts__item-link" href="mailto:digitalPlanetSaratov@mail.ru">digitalPlanetSaratov@mail.ru</a>
+          <p class="contacts__item-text contacts__item-city">Саратов</p>
+          <p class="contacts__item-text"><a class="contacts__item-link" href="tel:+79422212178">+7 (942) 221 – 21 – 78</a></p>
+          <p class="contacts__item-text"><a class="contacts__item-link" href="mailto:digitalPlanetSaratov@mail.ru">digitalPlanetSaratov@mail.ru</a></p>
         </li>
       </ul>
 
@@ -92,7 +92,7 @@
 
             <label for="question" class="visually-hidden">Что вас интересует?</label>
             <textarea id="question" name="question" placeholder="Что вас интересует?" required></textarea>
-            <button class="contact__form-button" type="submit">Отправить</button>
+            <button class="button contacts__form-button" type="submit">Отправить</button>
           </div>
         </form>
       </div>
