--- a/source/product.html
+++ b/source/product.html
@@ -33,7 +33,7 @@
       </p>
       <ul class="page-header__list">
         <li class="page-header__item">
-          <a class="page-header__link">О продукте</a>
+          <a class="page-header__link page-header__link--active">О продукте</a>
         </li>
         <li class="page-header__item">
           <a class="page-header__link" href="explanation.html">Как работает</a>
@@ -50,9 +50,9 @@
       </ul>
     </nav>
     <div class="page-header__contacts">
-      <a class="page-header__link" href="tel:+880055535752">8 (800) 555 35 75</a>
+      <a class="page-header__link page-header__link-tel" href="tel:+880055535752">8 (800) 555 35 75</a>
 
-      <button class="page-header__button" type="button">Заказать</button>
+      <button class="button page-header__button" type="button">Заказать</button>
     </div>
   </header>
 
@@ -93,8 +93,8 @@
           </li>
         </ul>
 
-        <button class="product__slider-button product__slider-button--back" type="button" disabled>Назад</button>
-        <button class="product__slider-button product__slider-button--next" type="button">Вперед</button>
+        <button class="product__slider-button product__slider-button--back" type="button" disabled><span class="visually-hidden">Назад</span></button>
+        <button class="product__slider-button product__slider-button--next" type="button"><span class="visually-hidden">Вперед</span></button>
       </div>
 
     </section>
