Добавляет стилизацию страницы технология

--- a/source/technology.html
+++ b/source/technology.html
@@ -33,6 +33,10 @@
       <path fill-rule="evenodd" clip-rule="evenodd" d="M24.098 9.53768C25.0268 10.3961 26.0071 11.2038 26.8401 12.1488C27.2081 12.5687 27.5565 13.002 27.823 13.4894C28.2007 14.1822 27.8586 14.9445 27.2024 14.9859L23.1233 14.9842C22.0712 15.0668 21.2319 14.6658 20.5262 13.9849C19.9615 13.4403 19.4385 12.8608 18.8954 12.2978C18.6728 12.0678 18.4398 11.8513 18.1614 11.6801C17.6045 11.338 17.1212 11.4427 16.803 11.9925C16.4789 12.5517 16.4053 13.1709 16.3735 13.7941C16.3298 14.7034 16.0395 14.9424 15.0746 14.9841C13.0126 15.0761 11.0557 14.7808 9.23773 13.7961C7.63497 12.928 6.3921 11.7025 5.31032 10.3151C3.20406 7.61357 1.59109 4.645 0.141409 1.59327C-0.184902 0.905713 0.053737 0.536635 0.855117 0.523572C2.18584 0.4991 3.51639 0.500842 4.84868 0.521831C5.38952 0.52932 5.74757 0.82298 5.95641 1.30667C6.67637 2.9825 7.55733 4.5769 8.66312 6.05478C8.9576 6.44824 9.25788 6.84171 9.68548 7.11865C10.1585 7.42528 10.5187 7.32365 10.7412 6.82481C10.8824 6.50851 10.9443 6.16782 10.9761 5.82905C11.0815 4.66355 11.0954 3.50006 10.9105 2.33866C10.797 1.61382 10.3657 1.1446 9.60167 1.00743C9.21179 0.9375 9.26984 0.800163 9.45861 0.589498C9.78649 0.226167 10.0949 0 10.7096 0H15.3196C16.0454 0.135596 16.2065 0.444235 16.3059 1.13554L16.3099 5.98311C16.3019 6.25073 16.4511 7.04488 16.9603 7.22202C17.3678 7.34812 17.6364 7.03948 17.881 6.79485C18.9847 5.68588 19.7725 4.37529 20.4763 3.0182C20.7886 2.42148 21.0571 1.80176 21.3174 1.18257C21.5102 0.72309 21.8128 0.49701 22.3595 0.507025L26.7964 0.51077C26.928 0.51077 27.0611 0.512599 27.1885 0.533239C27.9362 0.653855 28.141 0.958315 27.9101 1.64944C27.5463 2.73377 26.8384 3.6374 26.1462 4.5452C25.4063 5.5144 24.6149 6.45042 23.8812 7.42537C23.207 8.31567 23.2605 8.76443 24.098 9.53768Z"/>
     </symbol>
 
+    <symbol id="magnifier" width="40" height="40" viewBox="0 0 40 40">
+      <path d="M39.5815 37.6282L27.7637 25.8104C32.9257 19.6717 32.6467 10.3939 26.8568 4.60402C20.7181 -1.53467 10.7427 -1.53467 4.60402 4.60402C-1.53467 10.7427 -1.53467 20.7181 4.60402 26.8568C7.67337 29.8564 11.7193 31.3911 15.6955 31.3911C19.2532 31.3911 22.8806 30.1354 25.7407 27.7637L37.5585 39.5815C37.9073 39.8605 38.2561 40 38.6048 40C38.9536 40 39.3024 39.8605 39.5815 39.5815C40.1395 39.0234 40.1395 38.1863 39.5815 37.6282ZM24.8338 24.8338C19.8113 29.8564 11.5798 29.8564 6.55725 24.8338C1.53467 19.8113 1.53467 11.5798 6.55725 6.55725C9.06853 4.04596 12.4169 2.79032 15.6955 2.79032C18.9742 2.79032 22.3225 4.04596 24.8338 6.55725C29.8564 11.5798 29.8564 19.8113 24.8338 24.8338ZM24.0665 15.6955C24.0665 16.4629 23.4387 17.0907 22.6713 17.0907H17.0907V22.6713C17.0907 23.4387 16.4629 24.0665 15.6955 24.0665C14.9282 24.0665 14.3004 23.4387 14.3004 22.6713V17.0907H8.71974C7.9524 17.0907 7.32458 16.4629 7.32458 15.6955C7.32458 14.9282 7.9524 14.3004 8.71974 14.3004H14.3004V8.71974C14.3004 7.9524 14.9282 7.32458 15.6955 7.32458C16.4629 7.32458 17.0907 7.9524 17.0907 8.71974V14.3004H22.6713C23.4387 14.3004 24.0665 14.9282 24.0665 15.6955Z"/>
+    </symbol>
+
   </svg>
 
   <header class="page-header">
@@ -88,28 +92,56 @@
     <section class="technology">
       <h1 class="technology__title">VR-технология</h1>
 
-      <p class="technology__image-container"><img class="technology__image" src="img/VR-glasses.png" width="418" height="215" alt="VR-очки"></p>
+      <p class="technology__image-container">
+        <img class="technology__image" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
+        <button class="button technology__button" type="button"><svg class="technology__button-image" width="40" height="40"><use xlink:href="#magnifier"></use></svg><span class="visually-hidden">Увеличить</span></button>
+      </p>
 
       <ul class="technology__list">
-        <li class="technology__item">
+        <li class="technology__item technology__item-1">
+          <p class="technology__item-image-container technology__item-image-container-1">
+            <img class="technology__item-image technology__item-image-1" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
+          </p>
           <h2 class="technology__item-title">Masters Glass VR-iii</h2>
           <p class="technology__item-text">Используем только оригинальные импортные VR-очки. Технологии протестированы и безопасны для глаз. Напряжение во время просмотра — как при прогулке за счёт качественного обёъмного  изображения.</p>
         </li>
-        <li class="technology__item">
+        <li class="technology__item technology__item-2">
+          <p class="technology__item-image-container technology__item-image-container-2">
+            <img class="technology__item-image technology__item-image-2" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
+          </p>
           <h2 class="technology__item-title">Безопасность</h2>
           <p class="technology__item-text">Зритель всегда находится в центре зала, и четко зафиксирован в пространстве, что делает просмотр понятным и комфортным. Технология виртуальной реальности не портит зрение, а эффект присутсвтия развивает креативность и пространственное мышление.</p>
         </li>
-        <li class="technology__item">
+        <li class="technology__item technology__item-3">
+          <p class="technology__item-image-container technology__item-image-container-3">
+            <img class="technology__item-image technology__item-image-3" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
+          </p>
           <h2 class="technology__item-title">Оборудование</h2>
           <p class="technology__item-text">Все фильмы воспроизводятся при помощи встроенных в очки экранов мобильных телефонов ведущих брендов. Наши техники привезут всё обордуование с собой: от вас нужно лишь помещение для урока.</p>
         </li>
-        <li class="technology__item">
+        <li class="technology__item technology__item-4 technology__item--active">
+          <p class="technology__item-image-container technology__item-image-container-4">
+            <img class="technology__item-image technology__item-image-4" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
+          </p>
           <h2 class="technology__item-title">Система крепления</h2>
           <p class="technology__item-text">Подходит под любой размер головы, даже для первоклассника. Во время просмотра не получится навредить голове ребёнка за счёт тщательно проработанной конструкции очков.</p>
         </li>
       </ul>
 
+      <div class="technology__slider-container slider">
+          <p class="slider__number"><span class="product__slider-number--current">01 /</span> 06</p>
+
+          <div class="slider__buttons">
+            <button class="slider__button slider__button--back" type="button"><span class="visually-hidden">Назад</span></button>
+            <button class="slider__button slider__button--next" type="button"><span class="visually-hidden">Вперед</span></button>
+          </div>
+        </div>
+
     </section>
+
+    <div class="scroll">
+      <a class="scroll__link" href="technology.html"><span class="visually-hidden">Скролл вниз</span></a>
+    </div>
 
     <section class="popup">
       <div class="popup__wrapper"></div>
@@ -139,7 +171,16 @@
   </main>
 
   <footer class="page-footer">
-    <a href="#"><span class="visually-hidden">Скролл вниз</span></a>
+    <p class="page-footer__text">© Digital Planet, 2019</p>
+    <p class="page-footer__text">Детский VR планетарий. Все права защищены.</p>
+    <ul class="page-footer__social">
+      <li class="page-footer__social-item">
+        <a class="page-footer__social-link page-footer__social-link--fb"><svg class="page-footer__social-image" width="8" height="17"><use xlink:href="#fb"></use></svg><span class="visually-hidden">facebook</span></a>
+      </li>
+      <li class="page-footer__social-item">
+        <a class="page-footer__social-link page-footer__social-link--vk"><svg class="page-footer__social-image" width="21" height="11"><use xlink:href="#vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+      </li>
+    </ul>
   </footer>
 </body>
 </html>
