--- a/source/main.html
+++ b/source/main.html
@@ -35,13 +35,13 @@
 
     </svg>
 
-  <header class="page-header">
+  <header class="page-header page-header--close">
     <div class="page-header__wrapper">
       <p class="page-header__logo">
         <a class="page-header__logo-link"><svg class="page-header__logo-image" width="193" height="28" aria-label="логотип Digital PlaneT"><use xlink:href="#DigitalPlaneT-logo"></use></svg></a>
       </p>
-      <button class="page-header__toggle page-header__toggle--close" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <nav class="page-header__navigation page-header__navigation--close">
+      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <nav class="page-header__navigation">
         <ul class="page-header__list">
           <li class="page-header__item page-header__item--intro">
             <a class="page-header__link page-header__link--active">Главная</a>
@@ -156,5 +156,6 @@
         </li>
       </ul>
   </footer>
+  <script src="js/main.js" async></script>
 </body>
 </html>
